# card_games

./: LICENSE  NICEGUI_IMPLEMENTATION.md  README.md  WEB_UI_README.md  demo.py  example.py  launch_ui.py  main.py  pyproject.toml  run_ui.py  run_ui_modular.py
.nicegui/: storage-user-0b1dccdb-4bc1-4796-b984-87684414b2d4.json  storage-user-10d8c525-3a0d-4ab3-aef0-8b258decaf76.json  storage-user-2831c426-fb75-426a-a557-be76e213cdb3.json  storage-user-5411c713-3563-4539-bfe8-ea67e4ab9126.json  storage-user-6f3e5201-82c7-466c-b1dd-5553b17c490f.json  storage-user-c19f6768-0ece-48c2-b51b-c84f279ceaba.json  storage-user-cb6efa77-708e-4c0a-83bd-e6168ee62bb3.json  storage-user-e79bb3dc-58d7-4645-b493-04f480ba22a7.json
src/card_games/: __init__.py  main.py  uno.py  uno_cli.py
src/card_games/core/: __init__.py  card.py  game.py  player.py  rule.py  rule_engine.py
src/card_games/core/ui/: __init__.py  game_selector.py  main.py
src/card_games/uno/: __init__.py  cli.py  game.py  ui.py  ui_simple.py
src/card_games/uno/.nicegui/: storage-user-b949c70e-1e0a-405c-ba3b-62ef6c8a0a9f.json  storage-user-d28786bc-a642-4ded-8014-e579816a0871.json  storage-user-e79bb3dc-58d7-4645-b493-04f480ba22a7.json
src/card_games/uno/ui/: README.md  __init__.py  base.py  card_actions.py  components.py  game_header.py  game_page.py  heartbeat.py  landing.py  lobby.py  main.py  styles.py
tests/: test_uno.py
